--- a/assets/sass/abstracts/_utilities.scss
+++ b/assets/sass/abstracts/_utilities.scss
@@ -147,7 +147,9 @@
   height: 1px;
   width: 95%;
   background-color: rgba(255, 255, 255, 0.08);
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 80px;
 }
 
 // Show/Hide Element
