--- a/assets/sass/layout/_sections.scss
+++ b/assets/sass/layout/_sections.scss
@@ -25,3 +25,23 @@
   background-color: $COLOR_BLUE_SUPER_DARK;
   color: $COLOR_WHITE;
 }
+
+// FEATURE
+.features__checklist {
+  flex-wrap: wrap;
+}
+
+.features__checklist-box {
+  flex-basis: 50%;
+}
+
+.features__checklist-desc {
+  font-size: 1.5rem;
+  line-height: 1.33;
+}
+
+.features__checklist-img,
+.contact__icon {
+  vertical-align: middle;
+  margin-right: 15px;
+}
